@@ -7,3 +7,4 @@ Examples
 
 
 .. fancy_include:: refocus_cell.py
+.. fancy_include:: compare_metrics.py
