@@ -89,6 +89,8 @@ class Refocus(ABC):
             - "average gradient" : average gradient metric of amplitude
             - "rms contrast" : RMS contrast of phase data
             - "spectrum" : sum of filtered Fourier coefficients
+            - "std gradient" : standard deviation of gradient of amplitude
+            - "med gradient" : median gradient metric of amplitude
         minimizer: str
             - "legacy": custom nrefocus minimizer
             - "lmfit": lmfit-based minimizer (uses :func:`lmfit.minimize
