@@ -1,4 +1,5 @@
 0.5.2
+ - enh: add std and median metrics (#19)
  - enh: clarify roi argument for Refocus.autofocus method (#17)
 0.5.1
  - fix: internally normalize focusing distance to the wavelength for
